# distance_to_sea

./: .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  config.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: pylint.yml
distance_to_sea/: calc.py  format.py  params.py  process.py
src/: calc.py  clean.py  format.py  params.py  process.py
